# scrapy_test

./: .gitignore  pyproject.toml
scrape/scrape/spiders/: banana_spider.py
