[tool.poetry]
name = "scrapy"
version = "0.1.0"
description = ""
authors = ["Joshua Westphal Da Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
scrapy = "^2.6.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
